@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR

skinparam classAttributeIconSize 0
class ValidCommand <<enumeration>> {
        XYZCOMMAND

        - {static} AliasMap

        + {static} commandTypeOf (commandWord: String)
}
show method
show attribute


class IntelliJournalParser {
    +Command parseCommand(String userInput)
}

class "{abstract}\nCommand" as Command {
    + {abstract} execute()
}

IntelliJournalParser ..> ValidCommand
IntelliJournalParser ..> Command

@enduml
